--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 .DS_Store
+Library/Application Support/Cursor/*
+!Library/Application Support/Cursor/User/
+Library/Application Support/Cursor/User/*
+!Library/Application Support/Cursor/User/settings.json
+!Library/Application Support/Cursor/User/keybindings.json
