--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,6 +1,5 @@
 tap "ddev/ddev"
 tap "felixkratz/formulae"
-tap "homebrew/services"
 tap "libsql/sqld"
 tap "nikitabobko/tap"
 tap "oven-sh/bun"
@@ -9,6 +8,7 @@ tap "pulumi/tap"
 tap "sst/tap"
 tap "supabase/tap"
 tap "tursodatabase/tap"
+tap "vladkens/tap"
 tap "withgraphite/tap"
 brew "act"
 brew "giflib"
@@ -19,6 +19,7 @@ brew "arp-scan"
 brew "ast-grep"
 brew "awscli"
 brew "bat"
+brew "biome"
 brew "btop"
 brew "caddy"
 brew "cairo"
@@ -32,6 +33,7 @@ brew "fd"
 brew "harfbuzz"
 brew "pango"
 brew "ffmpeg"
+brew "fnm"
 brew "fzf"
 brew "gcc"
 brew "gh"
@@ -39,6 +41,9 @@ brew "git"
 brew "git-delta"
 brew "git-lfs"
 brew "gitleaks"
+brew "libusb"
+brew "gnupg"
+brew "go"
 brew "golangci-lint"
 brew "gum"
 brew "imagemagick"
@@ -47,6 +52,7 @@ brew "jq"
 brew "lazydocker"
 brew "lazygit"
 brew "librsvg"
+brew "md5sha1sum"
 brew "micro"
 brew "mkcert"
 brew "ncspot"
@@ -56,21 +62,26 @@ brew "pkgconf"
 brew "plow"
 brew "pnpm"
 brew "podman"
+brew "postgresql@17"
 brew "presenterm"
 brew "protobuf"
 brew "python-setuptools"
 brew "python@3.10"
+brew "redis"
 brew "ripgrep"
 brew "rust"
 brew "sshpass"
+brew "starship"
 brew "stow"
 brew "streamrip"
 brew "thefuck"
 brew "tldr"
+brew "tmux"
 brew "tokei"
 brew "trash", link: true
 brew "tree"
 brew "trufflehog"
+brew "typescript"
 brew "uv"
 brew "wget"
 brew "xh"
@@ -79,11 +90,42 @@ brew "yazi"
 brew "yt-dlp"
 brew "zoxide"
 brew "oven-sh/bun/bun"
+brew "sst/tap/opencode"
 brew "sst/tap/sst"
 brew "supabase/tap/supabase"
 brew "tursodatabase/tap/turso"
+brew "vladkens/tap/macmon"
 brew "withgraphite/tap/graphite"
 cask "1password-cli"
+cask "claude-code"
 cask "deskpad"
 cask "font-hack-nerd-font"
-cask "google-cloud-sdk"
+cask "gcloud-cli"
+cask "ghostty"
+cask "granola"
+cask "obsidian"
+cask "redis-insight"
+cask "superwhisper"
+cask "zed"
+cask "zen"
+vscode "aaron-bond.better-comments"
+vscode "adpyke.codesnap"
+vscode "asvetliakov.vscode-neovim"
+vscode "biomejs.biome"
+vscode "bradlc.vscode-tailwindcss"
+vscode "eamodio.gitlens"
+vscode "formulahendry.auto-close-tag"
+vscode "github.vscode-github-actions"
+vscode "github.vscode-pull-request-github"
+vscode "golang.go"
+vscode "nicoespeon.abracadabra"
+vscode "prisma.prisma-insider"
+vscode "qwtel.sqlite-viewer"
+vscode "redhat.vscode-yaml"
+vscode "sleistner.vscode-fileutils"
+vscode "sst-dev.opencode"
+vscode "statelyai.stately-vscode"
+vscode "streetsidesoftware.code-spell-checker"
+vscode "wallabyjs.console-ninja"
+vscode "yoavbls.pretty-ts-errors"
+vscode "yzhang.markdown-all-in-one"
