lazygit fancy diffs

--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -20,3 +20,7 @@ gui:
       - "#cdd6f4"
     searchingActiveBorderColor:
       - "#f9e2af"
+git:
+  paging:
+    colorArg: always
+    pager: diff-so-fancy
