--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,4 +1,5 @@
 tap "ddev/ddev"
+tap "fastrepl/hyprnote"
 tap "felixkratz/formulae"
 tap "libsql/sqld"
 tap "nikitabobko/tap"
@@ -17,6 +18,7 @@ brew "libpng"
 brew "zstd"
 brew "arp-scan"
 brew "ast-grep"
+brew "atuin"
 brew "awscli"
 brew "bat"
 brew "biome"
@@ -51,16 +53,19 @@ brew "jpeg"
 brew "jq"
 brew "lazydocker"
 brew "lazygit"
+brew "libpq", link: true
 brew "librsvg"
+brew "lnav"
 brew "md5sha1sum"
 brew "micro"
 brew "mkcert"
 brew "ncspot"
 brew "neovim"
 brew "nmap"
+brew "pgcli"
 brew "pkgconf"
 brew "plow"
-brew "pnpm"
+brew "pnpm", link: false
 brew "podman"
 brew "postgresql@17"
 brew "presenterm"
@@ -70,10 +75,12 @@ brew "python@3.10"
 brew "redis"
 brew "ripgrep"
 brew "rust"
+brew "sd"
 brew "sshpass"
 brew "starship"
 brew "stow"
 brew "streamrip"
+brew "tailspin"
 brew "thefuck"
 brew "tldr"
 brew "tmux"
@@ -83,11 +90,13 @@ brew "tree"
 brew "trufflehog"
 brew "typescript"
 brew "uv"
+brew "vercel-cli"
 brew "wget"
 brew "xh"
 brew "yarn"
 brew "yazi"
 brew "yt-dlp"
+brew "zellij"
 brew "zoxide"
 brew "oven-sh/bun/bun"
 brew "sst/tap/opencode"
@@ -96,16 +105,28 @@ brew "supabase/tap/supabase"
 brew "tursodatabase/tap/turso"
 brew "vladkens/tap/macmon"
 brew "withgraphite/tap/graphite"
+cask "1password"
 cask "1password-cli"
+cask "alcove"
+cask "arc"
+cask "bartender"
 cask "claude-code"
+cask "cleanshot"
+cask "cursor"
 cask "deskpad"
 cask "font-hack-nerd-font"
 cask "gcloud-cli"
 cask "ghostty"
 cask "granola"
+cask "hyprnote"
+cask "karabiner-elements"
+cask "keyboardcleantool"
 cask "obsidian"
+cask "raycast"
 cask "redis-insight"
+cask "screen-studio"
 cask "superwhisper"
+cask "warp"
 cask "zed"
 cask "zen"
 vscode "aaron-bond.better-comments"
@@ -113,6 +134,7 @@ vscode "adpyke.codesnap"
 vscode "asvetliakov.vscode-neovim"
 vscode "biomejs.biome"
 vscode "bradlc.vscode-tailwindcss"
+vscode "catppuccin.catppuccin-vsc"
 vscode "eamodio.gitlens"
 vscode "formulahendry.auto-close-tag"
 vscode "github.vscode-github-actions"
