--- a/.config/git/config
+++ b/.config/git/config
@@ -7,6 +7,7 @@
   compression = 9
   whitespace = error
   preloadindex = true
+  pager = delta
 
 [advice]
   addEmptyPathspec = false
@@ -36,23 +37,17 @@
   renames = copies
   interHunkContext = 10
 
+[delta]
+  navigate = true
+  line-numbers = true
+  syntax-theme = ansi
+
 [pager]
-  diff = diff-so-fancy | $PAGER
   branch = false
   tag = false
 
-[diff-so-fancy]
-  markEmptyLines = false
-
-[color "diff"]
-  meta        = black bold
-  frag        = magenta
-  context     = white
-  whitespace  = yellow reverse
-  old         = red
-
 [interactive]
-  diffFilter = diff-so-fancy --patch
+  diffFilter = delta --color-only
   singlekey = true
 
 [push]
