--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -6,6 +6,7 @@ tap "nikitabobko/tap"
 tap "oven-sh/bun"
 tap "planetscale/tap"
 tap "pulumi/tap"
+tap "schpet/tap"
 tap "sst/tap"
 tap "supabase/tap"
 tap "tursodatabase/tap"
@@ -29,34 +30,46 @@ brew "cloc"
 brew "cloudflared"
 brew "cmake"
 brew "diff-so-fancy"
+brew "direnv"
+brew "docker"
+brew "duf"
+brew "dust"
+brew "duti"
 brew "eye-d3"
 brew "eza"
 brew "fd"
-brew "harfbuzz"
-brew "pango"
 brew "ffmpeg"
 brew "fnm"
 brew "fzf"
 brew "gcc"
+brew "gemini-cli"
 brew "gh"
+brew "harfbuzz"
+brew "pango"
+brew "ghostscript"
 brew "git"
 brew "git-delta"
 brew "git-lfs"
 brew "gitleaks"
+brew "glow"
 brew "libusb"
 brew "gnupg"
 brew "go"
 brew "golangci-lint"
+brew "graphicsmagick"
 brew "gum"
+brew "hey"
+brew "hyperfine"
 brew "imagemagick"
 brew "jpeg"
 brew "jq"
+brew "json2ts"
 brew "lazydocker"
 brew "lazygit"
 brew "libpq", link: true
 brew "librsvg"
 brew "lnav"
-brew "md5sha1sum"
+brew "md5sha1sum", link: true
 brew "micro"
 brew "mkcert"
 brew "ncspot"
@@ -65,22 +78,27 @@ brew "nmap"
 brew "pgcli"
 brew "pkgconf"
 brew "plow"
-brew "pnpm", link: false
+brew "pnpm"
 brew "podman"
+brew "poppler"
 brew "postgresql@17"
 brew "presenterm"
 brew "protobuf"
+brew "protoc-gen-go"
 brew "python-setuptools"
 brew "python@3.10"
+brew "quicktype"
 brew "redis"
 brew "ripgrep"
 brew "rust"
 brew "sd"
+brew "spotify_player"
 brew "sshpass"
 brew "starship"
 brew "stow"
 brew "streamrip"
 brew "tailspin"
+brew "terminal-notifier"
 brew "thefuck"
 brew "tldr"
 brew "tmux"
@@ -98,7 +116,10 @@ brew "yazi"
 brew "yt-dlp"
 brew "zellij"
 brew "zoxide"
+brew "zsh-autosuggestions"
+brew "zsh-syntax-highlighting"
 brew "oven-sh/bun/bun"
+brew "schpet/tap/linear"
 brew "sst/tap/opencode"
 brew "sst/tap/sst"
 brew "supabase/tap/supabase"
@@ -110,44 +131,70 @@ cask "1password-cli"
 cask "alcove"
 cask "arc"
 cask "bartender"
+cask "betterdisplay"
 cask "claude-code"
 cask "cleanshot"
+cask "coderabbit"
 cask "cursor"
 cask "deskpad"
+cask "docker-desktop"
 cask "font-hack-nerd-font"
 cask "gcloud-cli"
 cask "ghostty"
 cask "granola"
-cask "hyprnote"
+cask "fastrepl/hyprnote/hyprnote"
 cask "karabiner-elements"
 cask "keyboardcleantool"
 cask "obsidian"
 cask "raycast"
 cask "redis-insight"
 cask "screen-studio"
+cask "spotify"
 cask "superwhisper"
 cask "warp"
 cask "zed"
 cask "zen"
 vscode "aaron-bond.better-comments"
 vscode "adpyke.codesnap"
+vscode "anthropic.claude-code"
+vscode "anysphere.remote-ssh"
 vscode "asvetliakov.vscode-neovim"
 vscode "biomejs.biome"
+vscode "bpruitt-goddard.mermaid-markdown-syntax-highlighting"
 vscode "bradlc.vscode-tailwindcss"
 vscode "catppuccin.catppuccin-vsc"
+vscode "coderabbit.coderabbit-vscode"
+vscode "dbaeumer.vscode-eslint"
 vscode "eamodio.gitlens"
+vscode "effectful-tech.effect-vscode"
+vscode "esbenp.prettier-vscode"
+vscode "etsi0.class-collapse"
 vscode "formulahendry.auto-close-tag"
 vscode "github.vscode-github-actions"
 vscode "github.vscode-pull-request-github"
 vscode "golang.go"
+vscode "mechatroner.rainbow-csv"
+vscode "mermaidchart.vscode-mermaid-chart"
+vscode "ms-azuretools.vscode-containers"
+vscode "ms-azuretools.vscode-docker"
 vscode "nicoespeon.abracadabra"
+vscode "oven.bun-vscode"
 vscode "prisma.prisma-insider"
 vscode "qwtel.sqlite-viewer"
 vscode "redhat.vscode-yaml"
+vscode "redis.redis-for-vscode"
 vscode "sleistner.vscode-fileutils"
 vscode "sst-dev.opencode"
 vscode "statelyai.stately-vscode"
 vscode "streetsidesoftware.code-spell-checker"
+vscode "svelte.svelte-vscode"
 vscode "wallabyjs.console-ninja"
 vscode "yoavbls.pretty-ts-errors"
 vscode "yzhang.markdown-all-in-one"
+go "github.com/atombender/go-jsonschema"
+go "github.com/google/go-licenses/v2"
+go "golang.org/x/tools/gopls"
+go "honnef.co/go/tools/cmd/staticcheck"
+go "github.com/bitfocus/syso/cmd/syso"
+go "github.com/wailsapp/wails/v2/cmd/wails"
+go "github.com/bokwoon95/wgo"
